--- a/trace/cloud-trace-demo-app-opentelemetry/app/cloud-trace-demo.yaml
+++ b/trace/cloud-trace-demo-app-opentelemetry/app/cloud-trace-demo.yaml
@@ -31,7 +31,8 @@ spec:
     spec:
       containers:
       - name: cloud-trace-demo-container
-        image: gcr.io/google_samples/cloud-trace-demo-opentelemetry:latest
+        # image: gcr.io/google_samples/cloud-trace-demo-opentelemetry:latest
+        image: barrymullan/cloud-trace-demo-opentelemetry:latest
         imagePullPolicy: "Always"
         command:
         - python
@@ -80,7 +81,8 @@ spec:
     spec:
       containers:
       - name: cloud-trace-demo-container
-        image: gcr.io/google_samples/cloud-trace-demo-opentelemetry:latest
+        # image: gcr.io/google_samples/cloud-trace-demo-opentelemetry:latest
+        image: barrymullan/cloud-trace-demo-opentelemetry:latest
         imagePullPolicy: "Always"
         command:
         - python
@@ -131,7 +133,8 @@ spec:
     spec:
       containers:
       - name: cloud-trace-demo-container
-        image: gcr.io/google_samples/cloud-trace-demo-opentelemetry:latest
+        # image: gcr.io/google_samples/cloud-trace-demo-opentelemetry:latest
+        image: barrymullan/cloud-trace-demo-opentelemetry:latest
         imagePullPolicy: "Always"
         command:
         - python
