--- a/trace/cloud-trace-demo-app-opentelemetry/app/requirements.txt
+++ b/trace/cloud-trace-demo-app-opentelemetry/app/requirements.txt
@@ -5,3 +5,5 @@ opentelemetry-propagator-gcp==1.3.0
 opentelemetry-instrumentation-flask==0.34b0
 opentelemetry-instrumentation-requests==0.34b0
 google-cloud-trace==1.7.2
+google-cloud-logging==3.3.0
+
